--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-hello
+<!DOCTYPE html>
+<html>
+  <head>
+    <title></title>
+  </head>
+  <body>
+    <h1>Hello!</h1>
+    <p>
+
+    </p>
+  </body>
+</html>
