--- a/index.html
+++ b/index.html
@@ -11,9 +11,17 @@
         Learn Enough to Be Dangerous is a leader in the movement to teach <em>technical sophistication</em>, the seemingly magical ability to take command of your computer and get it to do your bidding. This includes everything from command lines and coding to guessing keyboard shortcuts, Googling error messages, and knowing when to just reboot the darn thing. We believe there are <strong>at least a billion people</strong> who can benefit from learning technical sophistication, probably more. To join our movement, <a href="http://learnenough.com/email">sign up for our official email list</a> now.
       </p>
       <p>
+        <a href="https://twitter.com/learnenough" target="_blank" style="text-decoration: none;">
+          <img src="images/small_twitter_logo.png">
+        </a>
+        You should follow Learn Enough on Twitter
+        <a href="https://twitter.com/learnenough" target="_blank">here</a>.
+      <p>
         HTML was created by the original "web developer", computer scientist <a href="https://en.wikipedia.org/wiki/Tim_Berners-Lee">Tim Berners-Lee</a>. It's not true that Sir Tim invented HTML in order to share pictures of his cat, but it would be cool if it were.
       </p>
-      <img src="images/kitten.jpg" alt="Adorable kitten">
+      <a href="https://www.flickr.com/photos/deborah_s_perspective/14144861329">
+        <img src="images/kitten.jpg" alt="Adorable kitten">
+      </a>
 
     <h2>Background</h2>
 
@@ -30,7 +38,7 @@
 
     <h3>Michael Hartl</h3>
 
-      <img  src="https://gravatar.com/avatar/ffda7d145b83c4b118f982401f962ca6?s=150" alt="Michael Hartl">
+      <img src="https://gravatar.com/avatar/ffda7d145b83c4b118f982401f962ca6?s=150" alt="Michael Hartl">
       <p>
         Michael is the creator of the <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a> and principal author of the <a href="http://learnenough.com/">Learn Enough to Be Dangerous</a> introductory sequence. He is an advanced student of <a href="http://kravmaga.com/">Krav Maga</a> and has a three-step plan for world domination. Rumors that he's secretly a supervillain are slightly exaggerated.
       </p>
