--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8">
   </head>
   <body>
+    <a href="tags.html">Table of important HTML Tags</a>
+
     <h1>The Learn Enough Story</h1>
 
       <p>
