Add Moby Dick page, table content and language

--- a/tags.html
+++ b/tags.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>HTML Tags</title>
     <meta charset="utf-8">
@@ -25,6 +25,16 @@
           <th>Tag</th>
           <th>Name</th>
           <th>Purpose</th>
+        </tr>
+        <tr>
+          <td><code>header</code></td>
+          <td>header</td>
+          <td>FILL_IN</td>
+        </tr>
+        <tr>
+          <td><code>div</code></td>
+          <td>division</td>
+          <td>FILL_IN</td>
         </tr>
         <tr>
           <td><code>h1</code>&ndash;<code>h6</code></td>
@@ -69,6 +79,13 @@
           <th>Result</th>
         </tr>
         <tr>
+          <td><code>span</code></td>
+          <td>span</td>
+          <td>FILL_IN</td>
+          <td><code>&lt;span&gt;Call me Ishmael.&lt;/span&gt;</code></td>
+          <td><span>Call me Ishmael.</span></td>
+        </tr>
+        <tr>
           <td><code>em</code></td>
           <td>emphasized</td>
           <td>make emphasized text</td>
@@ -79,7 +96,9 @@
           <td><code>strong</code></td>
           <td>strong</td>
           <td>make strong text</td>
-          <td><code>&lt;strong&gt;at least a billion people&lt;/strong&gt;</code></td>
+          <td>
+            <code>&lt;strong&gt;at least a billion people&lt;/strong&gt;</code>
+          </td>
           <td><strong>at least a billion people</strong></td>
         </tr>
         <tr>
