--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <title>Learn Enough to Be Dangerous</title>
     <meta charset="utf-8">
   </head>
   <body>
-    <a href="tags.html">Table of important HTML Tags</a>
+    <a href="tags.html">Tag Table</a>
+    <a href="moby_dick.html">Book Report</a>
 
     <h1>The Learn Enough Story</h1>
 
