--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <meta charset="utf-8">
   </head>
   <body>
-    <a href="tags.html">Tag Table</a>
-    <a href="moby_dick.html">Book Report</a>
+
+    <div>
+      <a href="moby_dick.html">Moby Dick</a>
+      <a href="tags.html">HTML Tags</a>
+    </div>
 
     <h1>The Learn Enough Story</h1>
 
