--- a/moby_dick.html
+++ b/moby_dick.html
@@ -7,6 +7,12 @@
   <body>
 
     <!-- much here to be styled, will do so in last section -->
+
+    <div>
+      <a href="index.html">Home</a>
+      <a href="tags.html">HTML Tags</a>
+    </div>
+
     <header>
       <h1>A Softcover Book Report</h1>
       <h2>Moby-Dick (or, The Whale)</h2>
@@ -82,7 +88,7 @@
         </li>
         <li>Mad sea captains are fun</li>
       </ul>
-      
+
     </div>
   </body>
 </html>
