--- a/tags.html
+++ b/tags.html
@@ -34,12 +34,12 @@
         <tr>
           <td><code>header</code></td>
           <td>header</td>
-          <td>FILL_IN</td>
+          <td>define a header for the page</td>
         </tr>
         <tr>
           <td><code>div</code></td>
           <td>division</td>
-          <td>FILL_IN</td>
+          <td>define a division for styling</td>
         </tr>
         <tr>
           <td><code>h1</code>&ndash;<code>h6</code></td>
@@ -101,7 +101,7 @@
         <tr>
           <td><code>span</code></td>
           <td>span</td>
-          <td>FILL_IN</td>
+          <td>define a text part for styling</td>
           <td><code>&lt;span&gt;Call me Ishmael.&lt;/span&gt;</code></td>
           <td><span>Call me Ishmael.</span></td>
         </tr>
