--- a/moby_dick.html
+++ b/moby_dick.html
@@ -42,7 +42,7 @@
 
       <a href="https://www.softcover.io/read/6070fb03/moby-dick"
          target="_blank">
-        <img src="images/moby_dick.png" alt="Moby Dick">
+        <img src="images/moby_dick.png" alt="Moby Dick" height="200px" style="float: left">
       </a>
 
       <p>
@@ -54,7 +54,7 @@
 
       <blockquote style="font-style: italic; font-size: 20px;">
         <p>
-          <span style="font-style: normal; font-weight: bold; color: #ff0000; font-size: 24px;">Call me Ishmael.</span> Some years ago–never mind how long
+          <span style="font-style: normal; font-weight: bold; color: #ffff00; font-size: 24px;">Call me Ishmael.</span> Some years ago–never mind how long
           precisely–having little or no money in my purse, and nothing
           particular to interest me on shore, I thought I would sail about a
           little and see the watery part of the world. It is a way I have of
