--- a/tags.html
+++ b/tags.html
@@ -32,59 +32,59 @@
           <th>Purpose</th>
         </tr>
         <tr>
-          <td><code>header</code></td>
-          <td>header</td>
-          <td>define a header for the page</td>
+          <td style="padding: 10px;"><code>header</code></td>
+          <td style="padding: 10px;">header</td>
+          <td style="padding: 10px;">define a header for the page</td>
         </tr>
         <tr>
-          <td><code>div</code></td>
-          <td>division</td>
-          <td>define a division for styling</td>
+          <td style="padding: 10px;"><code>div</code></td>
+          <td style="padding: 10px;">division</td>
+          <td style="padding: 10px;">define a division for styling</td>
         </tr>
         <tr>
-          <td><code>h1</code>&ndash;<code>h6</code></td>
-          <td>headings</td>
-          <td>include a heading (levels 1&ndash;6)</td>
+          <td style="padding: 10px;"><code>h1</code>&ndash;<code>h6</code></td>
+          <td style="padding: 10px;">headings</td>
+          <td style="padding: 10px;">include a heading (levels 1&ndash;6)</td>
         </tr>
         <tr>
-          <td><code>p</code></td>
-          <td>paragraph</td>
-          <td>include a paragraph of text</td>
+          <td style="padding: 10px;"><code>p</code></td>
+          <td style="padding: 10px;">paragraph</td>
+          <td style="padding: 10px;">include a paragraph of text</td>
         </tr>
         <tr>
-          <td><code>table</code></td>
-          <td>table</td>
-          <td>include a table</td>
+          <td style="padding: 10px;"><code>table</code></td>
+          <td style="padding: 10px;">table</td>
+          <td style="padding: 10px;">include a table</td>
         </tr>
         <tr>
-          <td><code>tr</code></td>
-          <td>table row</td>
-          <td>include a row of data</td>
+          <td style="padding: 10px;"><code>tr</code></td>
+          <td style="padding: 10px;">table row</td>
+          <td style="padding: 10px;">include a row of data</td>
         </tr>
         <tr>
-          <td><code>th</code></td>
-          <td>table header</td>
-          <td>make a table header</td>
+          <td style="padding: 10px;"><code>th</code></td>
+          <td style="padding: 10px;">table header</td>
+          <td style="padding: 10px;">make a table header</td>
         </tr>
         <tr>
-          <td><code>td</code></td>
-          <td>table data</td>
-          <td>include a table data cell</td>
+          <td style="padding: 10px;"><code>td</code></td>
+          <td style="padding: 10px;">table data</td>
+          <td style="padding: 10px;">include a table data cell</td>
         </tr>
         <tr>
-          <td><code>ol</code></td>
-          <td>ordered list</td>
-          <td>include an ordered list</td>
+          <td style="padding: 10px;"><code>ol</code></td>
+          <td style="padding: 10px;">ordered list</td>
+          <td style="padding: 10px;">include an ordered list</td>
         </tr>
         <tr>
-          <td><code>ul</code></td>
-          <td>unordered list</td>
-          <td>include an unordered list</td>
+          <td style="padding: 10px;"><code>ul</code></td>
+          <td style="padding: 10px;">unordered list</td>
+          <td style="padding: 10px;">include an unordered list</td>
         </tr>
         <tr>
-          <td><code>li</code></td>
-          <td>list element</td>
-          <td>include a list element</td>
+          <td style="padding: 10px;"><code>li</code></td>
+          <td style="padding: 10px;">list element</td>
+          <td style="padding: 10px;">include a list element</td>
         </tr>
       </table>
 
