Style images, quotes, header, div and colors

--- a/index.html
+++ b/index.html
@@ -26,8 +26,23 @@
         HTML was created by the original "web developer", computer scientist <a href="https://en.wikipedia.org/wiki/Tim_Berners-Lee">Tim Berners-Lee</a>. It's not true that Sir Tim invented HTML in order to share pictures of his cat, but it would be cool if it were.
       </p>
       <a href="https://www.flickr.com/photos/deborah_s_perspective/14144861329">
-        <img src="images/kitten.jpg" alt="Adorable kitten">
+        <img src="images/kitten.jpg" alt="Adorable kitten" style="display: block; margin: 0 auto;">
       </a>
+
+    <h3>Quotations</h3>
+
+      <p>
+        In addition to hosting most of the world's supply of kitten videos, the
+        Web is also full of inspiring quotes, perhaps none more so than this one:
+      </p>
+
+      <blockquote style="margin: 0 auto; text-align: center; width: 600px; padding: 2px 20px; background: #eecc00;">
+        <p>
+          <em>Don't believe every quote you read on the Internet.</em>
+            <br>
+          —Abraham Lincoln
+        </p>
+      </blockquote>
 
     <h2>Background</h2>
 
