--- a/moby_dick.html
+++ b/moby_dick.html
@@ -13,9 +13,9 @@
       <a href="tags.html">HTML Tags</a>
     </div>
 
-    <header >
-      <h1 style="text-align: center;">A Softcover Book Report</h1>
-      <h2 style="text-align: center;">Moby-Dick (or, The Whale)</h2>
+    <header style="text-align: center; margin: 40px 0 60px;">
+      <h1>A Softcover Book Report</h1>
+      <h2>Moby-Dick (or, The Whale)</h2>
     </header>
 
     <div>
@@ -33,16 +33,16 @@
     </div>
 
     <a href="https://commons.wikimedia.org/wiki/File:Sperm_whale_pod.jpg">
-      <img src="images/sperm_whales.jpg" alt="Sperm Whales">
+      <img src="images/sperm_whales.jpg" alt="Sperm Whales" style="display: block; margin: auto;">
     </a>
 
-    <div>
+    <div style="width: 500px; margin: 20px auto; padding: 10px 30px; background-color: #f2f2f2">
 
       <h3>Moby-Dick: A classic tale of the sea</h3>
 
       <a href="https://www.softcover.io/read/6070fb03/moby-dick"
          target="_blank">
-        <img src="images/moby_dick.png" alt="Moby Dick" height="200px" style="float: left; margin-right: 40px;">
+        <img src="images/moby_dick.png" alt="Moby Dick" height="200px" style="float: left; margin: 20px 40px 20px 0;">
       </a>
 
       <p>
@@ -54,7 +54,7 @@
 
       <blockquote style="font-style: italic; font-size: 20px;">
         <p>
-          <span style="font-style: normal; font-weight: bold; color: #ffff00; font-size: 24px;">Call me Ishmael.</span> Some years ago–never mind how long
+          <span style="font-style: normal; font-weight: bold; color: #ccddff; font-size: 24px;">Call me Ishmael.</span> Some years ago–never mind how long
           precisely–having little or no money in my purse, and nothing
           particular to interest me on shore, I thought I would sail about a
           little and see the watery part of the world. It is a way I have of
