Add document tags to tags table and style navigation menu

--- a/moby_dick.html
+++ b/moby_dick.html
@@ -8,9 +8,10 @@
 
     <!-- much here to be styled, will do so in last section -->
 
-    <div>
-      <a href="index.html">Home</a>
-      <a href="tags.html">HTML Tags</a>
+    <div style="text-align: right;">
+      <a href="index.html" style="text-decoration: none; color: #0000ff;">Home</a>
+      <a href="moby_dick.html" style="margin-left: 10px; text-decoration: none; color: #0000ff;">Moby Dick</a>
+      <a href="tags.html" style="margin-left: 10px; text-decoration: none; color: #0000ff;">HTML Tags</a>
     </div>
 
     <header style="text-align: center; margin: 40px 0 60px;">
