--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
   </head>
   <body>
 
-    <div>
-      <a href="moby_dick.html">Moby Dick</a>
-      <a href="tags.html">HTML Tags</a>
+    <div style="text-align: right;">
+      <a href="index.html" style="text-decoration: none; color: #0000ff;">Home</a>
+      <a href="moby_dick.html" style="margin-left: 10px; text-decoration: none; color: #0000ff;">Moby Dick</a>
+      <a href="tags.html" style="margin-left: 10px; text-decoration: none; color: #0000ff;">HTML Tags</a>
     </div>
 
     <h1>The Learn Enough Story</h1>
