--- a/tags.html
+++ b/tags.html
@@ -6,9 +6,10 @@
   </head>
   <body>
 
-    <div>
-      <a href="index.html">Home</a>
-      <a href="moby_dick.html">Moby Dick</a>
+    <div style="text-align: right;">
+      <a href="index.html" style="text-decoration: none; color: #0000ff;">Home</a>
+      <a href="moby_dick.html" style="margin-left: 10px; text-decoration: none; color: #0000ff;">Moby Dick</a>
+      <a href="tags.html" style="margin-left: 10px; text-decoration: none; color: #0000ff;">HTML Tags</a>
     </div>
 
     <h1>Important HTML tags</h1>
@@ -22,6 +23,41 @@
       <p>
         The tables below don't include all HTML tags, but they do list many of the most important ones.
       </p>
+
+    <h2> Document Tags</h2>
+
+    <table>
+      <tr>
+        <th>Tag</th>
+        <th>Name</th>
+        <th>Purpose</th>
+      </tr>
+      <tr>
+        <td style="padding: 10px;"><code>html</code></td>
+        <td style="padding: 10px;">html document</td>
+        <td style="padding: 10px;">create a html document</td>
+      </tr>
+      <tr>
+        <td style="padding: 10px;"><code>head</code></td>
+        <td style="padding: 10px;">head</td>
+        <td style="padding: 10px;">store all meta information</td>
+      </tr>
+      <tr>
+        <td style="padding: 10px;"><code>body</code></td>
+        <td style="padding: 10px;">body</td>
+        <td style="padding: 10px;">store content</td>
+      </tr>
+      <tr>
+        <td style="padding: 10px;"><code>title</code></td>
+        <td style="padding: 10px;">title</td>
+        <td style="padding: 10px;">give title</td>
+      </tr>
+      <tr>
+        <td style="padding: 10px;"><code>meta</code></td>
+        <td style="padding: 10px;">meta information</td>
+        <td style="padding: 10px;">hold meta information</td>
+      </tr>
+    </table>
 
     <h2>Block Elements</h2>
 
